src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FDID__c</fullName>
        <description>Fire Department Identification Number</description>
        <label>FDID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Career__c</fullName>
        <label>Fire - Career</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Civilian_Personnel__c</fullName>
        <description>Non Fire Fighting Personnel</description>
        <label>Fire - Civilian Personnel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Fighter_Paid_Per_Call__c</fullName>
        <description>Fire Fighter - Paid Per Call</description>
        <label>Fire - Paid Per Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Installed_Year__c</fullName>
        <label>Fire RMS Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Mobile_Units__c</fullName>
        <description>This field captures the number of Fire Enforcement Mobile vehicles for this specific agency</description>
        <inlineHelpText>This field captures the number of Fire Enforcement Mobile vehicles for this specific agency</inlineHelpText>
        <label>Fire - Mobile Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_RMS_Users__c</fullName>
        <label>Fire - RMS Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Vendor__c</fullName>
        <label>Fire RMS Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CRIMES</fullName>
                </value>
                <value>
                    <fullName>CrimeStar</fullName>
                </value>
                <value>
                    <fullName>CR Management, Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fire_Volunteer_Firefighting__c</fullName>
        <label>Fire - Volunteer - Firefighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Volunteer_Non_Firefighting__c</fullName>
        <label>Fire - Volunteer - Non Firefighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Anniversary_Date__c</fullName>
        <label>Fiscal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_911__c</fullName>
        <label>Go Live Date - 911</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Accident_Reporting__c</fullName>
        <label>Go Live Date - Accident Reporting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Admin__c</fullName>
        <label>Go Live Date - Admin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_CAD__c</fullName>
        <label>Go Live Date - CAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Civil__c</fullName>
        <label>Go Live Date - Civil</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Community_Data_Platform__c</fullName>
        <label>Go Live Date - Community Data Platform</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Crimemapping_com__c</fullName>
        <label>Go Live Date - Crimemapping.com</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Crimeview_FireView_Dashbrd__c</fullName>
        <label>Go Live Date-Crimeview/FireView Dashbrd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Crimeview_Fireview_Deskto__c</fullName>
        <label>Go Live Date-Crimeview/Fireview Desktop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Detective__c</fullName>
        <label>Go Live Date - Detective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Financial__c</fullName>
        <label>Go Live Date - Financial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Fire_RMS__c</fullName>
        <label>Go Live Date - Fire RMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_IQ_Analytics_ARM__c</fullName>
        <label>Go Live Date - IQ Analytics/ARM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_IQ_Search__c</fullName>
        <label>Go Live Date - IQ Search</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_IQ_Suite__c</fullName>
        <label>Go Live Date - IQ Suite</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Inform_Me_Field_Ops__c</fullName>
        <label>Go Live Date - Inform Me/Field Ops</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Jail__c</fullName>
        <label>Go Live Date - Jail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Law_RMS__c</fullName>
        <label>Go Live Date - Law RMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Mapping__c</fullName>
        <label>Go Live Date - Mapping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Mobile__c</fullName>
        <label>Go Live Date - Mobile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_NEARme__c</fullName>
        <label>Go Live Date - NEARme</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Predictive_Missions__c</fullName>
        <label>Go Live Date - Predictive Missions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Respond_Billing__c</fullName>
        <label>Go Live Date - Respond Billing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Responsemapping_com__c</fullName>
        <label>Go Live Date - Responsemapping.com</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Tritech_Com_Biilling__c</fullName>
        <label>Go Live Date - TriTech.com Billing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_eCitation__c</fullName>
        <label>Go Live Date - eCitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Great_Plains_ID__c</fullName>
        <description>Account&apos;s associated Great Plains system ID number</description>
        <inlineHelpText>Account&apos;s associated Great Plains system ID number</inlineHelpText>
        <label>xGreat Plains ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Completed_by_Manager_Email__c</fullName>
        <description>Hieracrchy Completed by&apos;s manager email to be used for email alert purposes</description>
        <label>Hierarchy Completed by Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person who requested the Hierarchy changes</inlineHelpText>
        <label>Hierarchy Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsJax9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Director_Approved_Last_Modifie__c</fullName>
        <description>Populated via workflow: https://na6.salesforce.com/01Q80000000DRGF</description>
        <label>Hierarchy Director Approved LastModified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Updated_Last_Modified__c</fullName>
        <description>Populated via workflow: https://na6.salesforce.com/01Q80000000DRGK</description>
        <label>Hierarchy Updated Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_relationship_level_with_Account__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Highest relationship level with Account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker / Project Sponsor</fullName>
                </value>
                <value>
                    <fullName>Selection Committee Members</fullName>
                </value>
                <value>
                    <fullName>Chief, Sheriff, 911 Director</fullName>
                </value>
                <value>
                    <fullName>Public Safety Committee</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Secondary_Support_Vendor__c</fullName>
        <label>xHourly Rate - Secondary Support Vendor</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_for_Install_and_Support_Vend__c</fullName>
        <label>xHourly Rate - Install and Support Vendo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMC_Interfaces__c</fullName>
        <label>xIMC Interfaces</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm Interface</fullName>
                </value>
                <value>
                    <fullName>Alarm Interface-Zetron 6/26</fullName>
                </value>
                <value>
                    <fullName>Bar Coding - Multi User</fullName>
                </value>
                <value>
                    <fullName>Civil Process</fullName>
                </value>
                <value>
                    <fullName>Cop Logic Interface</fullName>
                </value>
                <value>
                    <fullName>Cross Agency Data Sharing</fullName>
                </value>
                <value>
                    <fullName>Data Dictionary Files (DDF&apos;s)</fullName>
                </value>
                <value>
                    <fullName>E911 Interface</fullName>
                </value>
                <value>
                    <fullName>Fingerprint Interface</fullName>
                </value>
                <value>
                    <fullName>Forms Attachment Utility</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>IMC EMS Mobile Switch</fullName>
                </value>
                <value>
                    <fullName>IMC NON-Wireless Clients</fullName>
                </value>
                <value>
                    <fullName>IMC State Interface</fullName>
                </value>
                <value>
                    <fullName>IMC Wireless Clients</fullName>
                </value>
                <value>
                    <fullName>Investigative</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Master Names Merge Utility</fullName>
                </value>
                <value>
                    <fullName>Multi AGENCY (for each jurisdiction)</fullName>
                </value>
                <value>
                    <fullName>Multi Jurisdiction Spoke - Multi User</fullName>
                </value>
                <value>
                    <fullName>Munis Interface</fullName>
                </value>
                <value>
                    <fullName>NESPIN - RISNET</fullName>
                </value>
                <value>
                    <fullName>Ortivus Sweet Billing Export</fullName>
                </value>
                <value>
                    <fullName>ProQA</fullName>
                </value>
                <value>
                    <fullName>Text/Speech-Speech Text</fullName>
                </value>
                <value>
                    <fullName>Contact Management (Quest)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQ_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IQ Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts138B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Contract_Types__c</fullName>
        <description>Shows a consolidated list of the inactivate service contract types associated with this account</description>
        <label>Inactive Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Volume__c</fullName>
        <inlineHelpText>Yearly incident volume</inlineHelpText>
        <label>Yearly Incident Report Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Contract_Signed__c</fullName>
        <label>Initial Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insight_SQL_Server_Address__c</fullName>
        <label>Insight SQL Server Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_Version__c</fullName>
        <label>Insight Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Support_Vendor__c</fullName>
        <description>Install and local on-site support vendor</description>
        <inlineHelpText>Install and local on-site support vendor</inlineHelpText>
        <label>Install and Support Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Athena Networks</fullName>
                </value>
                <value>
                    <fullName>Axess Communications</fullName>
                </value>
                <value>
                    <fullName>Barrister Global</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cerium Networks</fullName>
                </value>
                <value>
                    <fullName>Commercial Telcom Systems, Inc. (CTS)</fullName>
                </value>
                <value>
                    <fullName>Communications Technologies Associates</fullName>
                </value>
                <value>
                    <fullName>Covenant</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Digital Domain</fullName>
                </value>
                <value>
                    <fullName>ER Communications</fullName>
                </value>
                <value>
                    <fullName>Hancock</fullName>
                </value>
                <value>
                    <fullName>Hoosier Equipment Brokers</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Intrado</fullName>
                </value>
                <value>
                    <fullName>King Technologies</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic Business Communications</fullName>
                </value>
                <value>
                    <fullName>NexTech</fullName>
                </value>
                <value>
                    <fullName>Nex-Tech</fullName>
                </value>
                <value>
                    <fullName>Purvis Systems</fullName>
                </value>
                <value>
                    <fullName>STS</fullName>
                </value>
                <value>
                    <fullName>Superior Radio</fullName>
                </value>
                <value>
                    <fullName>Supreme Radio</fullName>
                </value>
                <value>
                    <fullName>Telnet of Virginia</fullName>
                </value>
                <value>
                    <fullName>The Phone Booth</fullName>
                </value>
                <value>
                    <fullName>The Wilson Group</fullName>
                </value>
                <value>
                    <fullName>TNSI</fullName>
                </value>
                <value>
                    <fullName>Valley-Sierra Communications</fullName>
                </value>
                <value>
                    <fullName>Vertical Communications</fullName>
                </value>
                <value>
                    <fullName>Wilson Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interfaces_Addons__c</fullName>
        <label>Interfaces and Add-ons</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues_Problems__c</fullName>
        <description>This is a tracking field to notate potential issues or problems with the Account/Opportunity(s)</description>
        <inlineHelpText>This is a tracking field to notate potential issues or problems with the Account/Opportunity(s)</inlineHelpText>
        <label>Issues/Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jail_Beds__c</fullName>
        <inlineHelpText>Number of jail beds</inlineHelpText>
        <label>Jail Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jail_Installed_Year__c</fullName>
        <label>Jail Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jail_Vendor__c</fullName>
        <label>Jail Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Alert Public Safety Solutions (APSS)</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>Blue Diamond</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Arts</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Feature_Request_Saved__c</fullName>
        <label>Last Feature Request Saved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Actions__c</fullName>
        <label>Last Modified (Actions)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_At_Risk__c</fullName>
        <label>Last Modified (At Risk)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Comments__c</fullName>
        <label>Last Modified (Comments)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Issues__c</fullName>
        <label>Last Modified (Issues)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Yearly_Contact_Customer_Risk_Level__c</fullName>
        <label>xLast Yearly Contact Customer Risk Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Civilian_Personnel__c</fullName>
        <description>Number of Law Enforcement Civilian Personnel for this Agency</description>
        <label>Law - Civilian Personnel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Law_Mobile_Units__c</fullName>
        <description>This field captures the number of Law Enforcement Mobile vehicles for this specific agency</description>
        <inlineHelpText>This field captures the number of Law Enforcement Mobile vehicles for this specific agency</inlineHelpText>
        <label>Law - Mobile Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Law_RMS_Users__c</fullName>
        <label>Law - RMS Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Number__c</fullName>
        <label>Legacy Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ETI_ID__c</fullName>
        <label>Legacy ETI ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_TCS_HEAT_ID__c</fullName>
        <label>Legacy TCS / HEAT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_City_WMP__c</fullName>
        <label>Mailing/Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Country_WMP__c</fullName>
        <label>Mailing/Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Tasmania</fullName>
                </value>
                <value>
                    <fullName>Trinidad and Tobago</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Virgin Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Billing_State_WMP__c</fullName>
        <label>Mailing/Billing State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Street_WMP__c</fullName>
        <label>Mailing/Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Zip_Postal_Code_WMP__c</fullName>
        <label>Mailing/Billing Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>